# phoenix

./: Action.h  Blur.h  Brighten.h  CMakeLists.txt  Dilate.h  Editor.cpp  Editor.h  Erode.h  Makefile  Point.cpp  Point.h  README.md  Resize.h  main  main.cpp
